Replace newInstance() with getDeclaredConstructor().newInstances #3